tests/detection/syntax_error/setup.py
# noqa
from distutils.core import setup

setup(
    name='prospector-test-1',
    version='0.0.1',
    install_requires=[
        'Django==2.2.27',
        'django-gubbins==1.1.2'
    ] narm narm narm
)
